--- a/notebooks/img-clf.ipynb
+++ b/notebooks/img-clf.ipynb
@@ -15,14 +15,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "import torch\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "sys.path.append('..')\n",
-    "\n",
-    "from perceiver.lightning import LitImageClassifier"
+    "from perceiver.model import LitImageClassifier"
    ]
   },
   {
@@ -33,7 +30,7 @@
    "outputs": [],
    "source": [
     "from torchvision.datasets import MNIST\n",
-    "from data import MNISTPreprocessor\n",
+    "from perceiver.data import MNISTPreprocessor\n",
     "\n",
     "mnist = MNIST(root='../.cache', train=False)\n",
     "mnist_preproc = MNISTPreprocessor()"
