--- a/notebooks/txt-clf.ipynb
+++ b/notebooks/txt-clf.ipynb
@@ -15,13 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "import torch\n",
     "\n",
-    "sys.path.append('..')\n",
-    "\n",
-    "from data import TextPreprocessor\n",
-    "from perceiver import LitTextClassifier"
+    "from perceiver.data import TextPreprocessor\n",
+    "from perceiver.model import LitTextClassifier"
    ]
   },
   {
