Use latest checkpoints

--- a/notebooks/txt-clf.ipynb
+++ b/notebooks/txt-clf.ipynb
@@ -47,7 +47,7 @@
    ],
    "source": [
     "# Download model checkpoints\n",
-    "!wget -nc -O logs.zip https://martin-krasser.com/perceiver/logs-update-1.zip\n",
+    "!wget -nc -O logs.zip https://martin-krasser.com/perceiver/logs-update-2.zip\n",
     "!unzip -qo logs.zip"
    ]
   },
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt_path = '../logs/seq_clf/version_1/checkpoints/epoch=025-val_loss=0.256.ckpt'\n",
+    "ckpt_path = 'logs/seq_clf/version_1/checkpoints/epoch=021-val_loss=0.253.ckpt'\n",
     "\n",
     "model = LitTextClassifier.load_from_checkpoint(ckpt_path, clf_ckpt=None).model\n",
     "model.eval();"
@@ -126,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
