Upgrade to latest PyTorch Lightning version

--- a/notebooks/txt-clf.ipynb
+++ b/notebooks/txt-clf.ipynb
@@ -18,8 +18,8 @@
         "!pip install fairscale==0.4.*\n",
         "!pip install einops==0.4.*\n",
         "!pip install tokenizers==0.12.*\n",
-        "!pip install jsonargparse==4.7.1\n",
-        "!pip install pytorch-lightning==1.6.2"
+        "!pip install jsonargparse==4.7.*\n",
+        "!pip install pytorch-lightning==1.6.*"
       ],
       "metadata": {
         "colab": {
