Modality- and task-based modularization

--- a/notebooks/txt-clf.ipynb
+++ b/notebooks/txt-clf.ipynb
@@ -139,7 +139,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Download vocabulary\n",
+        "# Download tokenizer data\n",
         "!wget https://raw.githubusercontent.com/krasserm/perceiver-io/main/.cache/imdb-tokenizer-10003.json"
       ],
       "metadata": {
