Fix device check in notebook

--- a/notebooks/inference_examples.ipynb
+++ b/notebooks/inference_examples.ipynb
@@ -1237,7 +1237,7 @@
         "from perceiver.model.text.clm import LitCausalLanguageModel\n",
         "\n",
         "# Text generation quite slow on a CPU, use GPU is available\n",
-        "device = \"cuda\" if torch.cuda.is_available else \"cpu\"\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "\n",
         "ckpt = \"logs/clm_pre/version_0/checkpoints/epoch=005-val_loss=0.955.ckpt\"\n",
         "model = LitCausalLanguageModel.load_from_checkpoint(ckpt).model.eval().to(device)"
