Minor edits in documentation

--- a/notebooks/inference_examples.ipynb
+++ b/notebooks/inference_examples.ipynb
@@ -62,7 +62,7 @@
         "from PIL import Image\n",
         "\n",
         "# The perceiver-io library can use model configurations \n",
-        "# and pretrained model parameters from the Huggingface Hub.\n",
+        "# and pretrained model parameters from the Hugging Face Hub.\n",
         "from transformers import AutoConfig"
       ]
     },
@@ -189,7 +189,7 @@
         "id": "3246fc42"
       },
       "source": [
-        "The tokenizer is a Huggingface tokenizer identified by `deepmind/language-perceiver`. It is loaded and used by the `TextPreprocessor` class that prepares text for being processed by NLP models. A `MaskedSampleFiller` implements the boilerplate of mask filling."
+        "The tokenizer is a Hugging Face tokenizer identified by `deepmind/language-perceiver`. It is loaded and used by the `TextPreprocessor` class that prepares text for being processed by NLP models. A `MaskedSampleFiller` implements the boilerplate of mask filling."
       ]
     },
     {
@@ -309,7 +309,7 @@
       "source": [
         "#### Pretrained model\n",
         "\n",
-        "The pretrained language model is initialized with parameters downloaded from the Huggingface Hub."
+        "The pretrained language model is initialized with parameters downloaded from the Hugging Face Hub."
       ]
     },
     {
@@ -397,7 +397,7 @@
       "source": [
         "from perceiver.model.text.mlm import convert_config, MaskedLanguageModel\n",
         "\n",
-        "# Load model configuration from the Huggingface Hub.\n",
+        "# Load model configuration from the Hugging Face Hub.\n",
         "config = AutoConfig.from_pretrained(\"deepmind/language-perceiver\")\n",
         "\n",
         "# Convert the configuration, instantiate the language \n",
@@ -673,7 +673,7 @@
         "\n",
         "#### ImageNet classifier\n",
         "\n",
-        "The ImageNet classifier is specified in Appendix A of the [Perceiver IO paper](https://arxiv.org/abs/2107.14795) (config A, 2D Fourier features, 48.8M parameters). It is initialized with pretrained parameters downloaded from the Huggingface Hub."
+        "The ImageNet classifier is specified in Appendix A of the [Perceiver IO paper](https://arxiv.org/abs/2107.14795) (config A, 2D Fourier features, 48.8M parameters). It is initialized with pretrained parameters downloaded from the Hugging Face Hub."
       ]
     },
     {
@@ -769,7 +769,7 @@
       "source": [
         "from perceiver.model.image.classifier import convert_config, ImageClassifier\n",
         "\n",
-        "# Load model configuration from the Huggingface Hub.\n",
+        "# Load model configuration from the Hugging Face Hub.\n",
         "config = AutoConfig.from_pretrained(\"deepmind/vision-perceiver-fourier\")\n",
         "\n",
         "# Convert the configuration, instantiate the language \n",
