Fix termcolor version to 2.0.1
- version 2.1.0 doesn't work in notebooks anymore

--- a/notebooks/inference_examples.ipynb
+++ b/notebooks/inference_examples.ipynb
@@ -31,7 +31,7 @@
       "source": [
         "!pip install perceiver-io[image,text]==0.6.0\n",
         "!pip install matplotlib\n",
-        "!pip install termcolor\n",
+        "!pip install termcolor==2.0.1\n",
         "!pip install \"ipywidgets>=7,<8\""
       ]
     },
