Model is passed to MaskedSampleFiller.fill() method

--- a/examples/inference.ipynb
+++ b/examples/inference.ipynb
@@ -388,7 +388,7 @@
     "id": "ad80a2a0"
    },
    "source": [
-    "For tokenizing a batch of `masked_samples`, a generic `TextPreprocessor` is used. For filling tokens into masked text, a `MaskSampleFiller` utility is used. It is configured with a text preprocessor (during instantiation) and a masked language model (after instantiation)."
+    "For tokenizing a batch of `masked_samples`, a generic `TextPreprocessor` is used. A `MaskSampleFiller` utility implements the boilerplate for filling tokens into masked text."
    ]
   },
   {
@@ -518,7 +518,7 @@
    "source": [
     "#### Pretrained model\n",
     "\n",
-    "The pretrained language model is initialized with weights downloaded from the 🤗 Hub."
+    "The pretrained language model is initialized with weights downloaded from the 🤗 Hub"
    ]
   },
   {
@@ -611,10 +611,7 @@
     "config = AutoConfig.from_pretrained(\"deepmind/language-perceiver\")\n",
     "\n",
     "# Convert configuration, instantiate model and load weights\n",
-    "model = MaskedLanguageModel(convert_config(config))\n",
-    "\n",
-    "# Configure the mask filler utility to use this model\n",
-    "filler.model = model.eval()"
+    "model = MaskedLanguageModel(convert_config(config)).eval()"
    ]
   },
   {
@@ -624,7 +621,7 @@
     "id": "9cc5b4ac"
    },
    "source": [
-    "After having configured `filler` with the model, masked text can be filled."
+    "and then used for predicting masked tokens."
    ]
   },
   {
@@ -668,7 +665,7 @@
     }
    ],
    "source": [
-    "masked_samples, filled_samples = filler.fill(masked_samples, num_predictions=1)\n",
+    "masked_samples, filled_samples = filler.fill(model, masked_samples, num_predictions=1)\n",
     "print_predictions(masked_samples, filled_samples)"
    ]
   },
@@ -764,10 +761,7 @@
     "url = checkpoint_url(\"mlm/version_0/checkpoints/epoch=012-val_loss=1.165.ckpt\")\n",
     "\n",
     "# Load the PyTorch Lightning wrapper of the language model from a checkpoint\n",
-    "lit_model = LitMaskedLanguageModel.load_from_checkpoint(url)\n",
-    "\n",
-    "# Configure the mask filler utility to use the wrapped PyTorch language model\n",
-    "filler.model = lit_model.model.eval()"
+    "lit_model = LitMaskedLanguageModel.load_from_checkpoint(url).eval()"
    ]
   },
   {
@@ -777,7 +771,7 @@
     "id": "d95aff76"
    },
    "source": [
-    "Use the fine-tuned model to fill masked text."
+    "The wrapped model is used to fill masked text."
    ]
   },
   {
@@ -821,7 +815,7 @@
     }
    ],
    "source": [
-    "masked_samples, filled_samples = filler.fill(masked_samples, num_predictions=1)\n",
+    "masked_samples, filled_samples = filler.fill(lit_model.model, masked_samples, num_predictions=1)\n",
     "print_predictions(masked_samples, filled_samples)"
    ]
   },
@@ -2108,9 +2102,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "perceiver-io",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "perceiver-io"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
