Update regarding FLOPs computation
[skip ci]

--- a/examples/scaling/clm/article.ipynb
+++ b/examples/scaling/clm/article.ipynb
@@ -149,7 +149,7 @@
     "\n",
     "## Compute estimates\n",
     "\n",
-    "For estimating the FLOPs required to train Perceiver AR models I'm using the compute estimates from Table 1 in \\[3\\] and additionally include the estimates for the embedding layer and the final output layer as done in Appendix F of \\[1\\]. This is implemented in class `ComputeEstimator`.\n",
+    "For estimating the FLOPs required to train Perceiver AR models I'm using the compute estimates from Table 1 in \\[3\\] and additionally include the estimates for the embedding layer and the final output layer as done in Appendix F of \\[1\\]. This is implemented in class `ComputeEstimator`. **Update:** FLOPs computation as described in Appendix F of \\[1\\] seems to be incorrect. You can find all details [here](https://github.com/krasserm/perceiver-io/blob/main/examples/scaling/clm/update.md) and how it affects the results in this article (TL;DR the conclusion remains valid).\n",
     "\n",
     "The training FLOPs per latent token for the self-attention part of Perceiver AR can be estimated with the `self_attn()` method. The training FLOPs per latent token for the initial cross-attention can be estimated with `cross_attn()`. An example:"
    ]
@@ -965,7 +965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
