Fix typo in inference examples notebook
[skip ci]

--- a/examples/inference.ipynb
+++ b/examples/inference.ipynb
@@ -1750,7 +1750,7 @@
     "id": "509230ba"
    },
    "source": [
-    "Generate text by prompting a Perceiver AR language model (455M parameters) [pretrained](https://github.com/krasserm/perceiver-io/blob/main/docs/training-examples.md#model-2) on a small subset ($1e10$ tokens) of the C4 English dataset. The model was trained with sequences of length of `1024` (512 prefix tokens and 512 latent tokens per example), tokenized with the 🤗 `xlnet-base-cased` tokenizer, a SentencePiece tokenizer."
+    "Generate text by prompting a Perceiver AR language model (455M parameters) [pretrained](https://github.com/krasserm/perceiver-io/blob/main/docs/training-examples.md#model-2) on a subset (79B tokens) of the C4 English dataset. The model was trained with sequences of length of `1024` (512 prefix tokens and 512 latent tokens per example), tokenized with the 🤗 `xlnet-base-cased` tokenizer, a SentencePiece tokenizer."
    ]
   },
   {
